--- a/_data/tutorials.yaml
+++ b/_data/tutorials.yaml
@@ -387,7 +387,6 @@ kafka-producer-application:
     kstreams: disabled
     kafka: enabled
 
-
 kafka-producer-application-callback:
   title: "How build an Apache KafkaProducer application using callbacks"
   meta-description: "How build an Apache KafkaProducer application using callbacks"
@@ -398,6 +397,25 @@ kafka-producer-application-callback:
     ksql: disabled
     kstreams: disabled
     kafka: enabled
+    c: disabled
+    go: disabled
+    groovy: disabled
+    nodejs: disabled
+    python: disabled
+    ruby: disabled
+    scala: disabled
+    swift: disabled
+
+kafka-streams-schedule-operations:
+  title: "I NEED TO BE UPDATED"
+  meta-description: "I NEED TO BE UPDATED"
+  slug: "/kafka-streams-schedule-operations"
+  question: "I NEED TO BE UPDATED"
+  introduction: "I NEED TO BE UPDATED"
+  status:
+    ksql: disabled
+    kstreams: enabled
+    kafka: disabled
     c: disabled
     go: disabled
     groovy: disabled
